--- a/example.env
+++ b/example.env
@@ -3,3 +3,8 @@ PG_DBNAME=smartyard
 PG_USER=smartyard
 PG_PASS=smartyardpass
 WORK_DIR=/opt
+KANNEL_HOST=localhost
+KANNEL_PORT=13013
+KANNEL_USER=kannel
+KANNEL_PASS=kannelpass
+KANNEL_FROM=ROSTELESET
