--- a/example.env
+++ b/example.env
@@ -9,3 +9,4 @@ KANNEL_USER=kannel
 KANNEL_PASS=kannelpass
 KANNEL_FROM=ROSTELESET
 KANNEL_TEXT='РОСТЕЛЕСЕТЬ код подтверждения: '
+BILLING_URL=https://billing.ru/api/
