--- a/example.env
+++ b/example.env
@@ -10,3 +10,4 @@ KANNEL_PASS=kannelpass
 KANNEL_FROM=ROSTELESET
 KANNEL_TEXT='РОСТЕЛЕСЕТЬ код подтверждения: '
 BILLING_URL=https://billing.ru/api/
+EXPIRE=360
