--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -2,3 +2,9 @@ black==22.1.0
 isort==5.10.1
 pytest==7.1.1
 pytest-mock==3.7.0
+flake8==4.0.1
+pylint==2.13.0
+mypy==0.942
+types-requests==2.27.14
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
