--- a/smartyard.ini
+++ b/smartyard.ini
@@ -1,6 +1,6 @@
 #user=smartyard
 directory = /opt/smartyard
-command = /opt/smartyard/app.py
+command = /opt/smartyard/env/bin/python /opt/smartyard/app.py
 autostart = true
 autorestart = true
 stdout_logfile = /var/log/smartyard_out.log
