--- a/smartyard.ini
+++ b/smartyard.ini
@@ -1,6 +1,7 @@
 #user=smartyard
 directory = /opt/smartyard
 command = /opt/smartyard/env/bin/python /opt/smartyard/app.py
+command = /opt/smartyard/env/bin/gunicorn app:gunicorn_app -b 127.0.0.1:5000 -w 4
 autostart = true
 autorestart = true
 stdout_logfile = /var/log/smartyard_out.log
