--- a/.pylintrc
+++ b/.pylintrc
@@ -92,13 +92,8 @@ disable=raw-checker-failed,
         useless-suppression,
         deprecated-pragma,
         use-symbolic-message-instead,
-        W0703,
-        R0903,
-        R0201,
-        R0801,
-        W0511,
-        R0902,
-        E1101
+        R0801, # TODO: Дублирование кода. Убрать, когда заглушки будут замещены реальной логикой.
+        W0511 # TODO: Наличие TODO в коде. Убрать, кода все буду закрыты.
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
