--- a/example.env
+++ b/example.env
@@ -11,3 +11,5 @@ KANNEL_FROM=ROSTELESET
 KANNEL_TEXT='РОСТЕЛЕСЕТЬ код подтверждения: '
 BILLING_URL=https://billing.ru/api/
 EXPIRE=360
+TEST_USER=89898989898
+TEST_PASS=9898
