--- a/example.env
+++ b/example.env
@@ -3,13 +3,18 @@ PG_DBNAME=smartyard
 PG_USER=smartyard
 PG_PASS=smartyardpass
 WORK_DIR=/opt
-KANNEL_HOST=localhost
-KANNEL_PORT=13013
-KANNEL_USER=kannel
-KANNEL_PASS=kannelpass
-KANNEL_FROM=ROSTELESET
-KANNEL_TEXT='РОСТЕЛЕСЕТЬ код подтверждения: '
-BILLING_URL=https://billing.ru/api/
+VIDEO_ARСHIVE_DIR=/data/video
+IMG_ARСHIVE_DIR=/data/img
+CAMSHOT_DIR=/data/camshot
+SLIDESHOW_DIR=/data/slideshow
+KANNEL_HOST=91.198.46.248
+KANNEL_PORT=13003
+KANNEL_USER=user
+KANNEL_PASS=paSsWoRd
+KANNEL_FROM=AXIOSTV
+KANNEL_TEXT='АКСИОСТВ код подтверждения: '
+BILLING_URL=https://stat.axiostv.ru/api/
 EXPIRE=360
 TEST_USER=89898989898
 TEST_PASS=9898
+GOOGLEFSM=smartyard-...............json
