--- a/example.env
+++ b/example.env
@@ -2,19 +2,34 @@ PG_HOST=localhost
 PG_DBNAME=smartyard
 PG_USER=smartyard
 PG_PASS=smartyardpass
+MY_HOST=192.168.99.99
+MY_USER=smartyard
+MY_PASS=smartyard
+MY_DBNAME=smartyard
+BILLAPI_URL=http://192.168.4.2:34012
+BILLAPI_LOGIN=smartyard
+BILLAPI_PASS=smartyard
 WORK_DIR=/opt
 VIDEO_ARСHIVE_DIR=/data/video
 IMG_ARСHIVE_DIR=/data/img
 CAMSHOT_DIR=/data/camshot
 SLIDESHOW_DIR=/data/slideshow
-KANNEL_HOST=91.198.46.248
-KANNEL_PORT=13003
-KANNEL_USER=user
-KANNEL_PASS=paSsWoRd
-KANNEL_FROM=AXIOSTV
-KANNEL_TEXT='АКСИОСТВ код подтверждения: '
-BILLING_URL=https://stat.axiostv.ru/api/
+APPEALDOC_DIR=/data/hcs/appealdoc
+SERVER_URL=https://sa.server.ru
+SMS_TYPE=kannel
+SMS_HOST=192.168.100.100
+SMS_PORT=13003
+SMS_USER=user
+SMS_PASS=smartyard
+SMS_FROM=AXIOSTV
+SMS_TEXT='АКСИОСТВ код подтверждения: '
+BILLING_URL=https://billing.server.ru/api/
 EXPIRE=360
-TEST_USER=89898989898
-TEST_PASS=9898
-GOOGLEFSM=smartyard-...............json
+BANCK_USERNAME='smartyard'
+BANCK_PASSWD='smartyard'
+UKASSA_USERNAME='smartyard'
+UKASSA_PASSWD='live_smartyard'
+TEST_USER=81234567890
+TEST_PASS=9876
+HELPDESKPHONE='+74742000001'
+GOOGLEFSM=smartyard-smartyard.json
